css/style.css
/* Global */

*, *::before, *::after {
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

body {
    margin: 0;
    padding: 0;
    color: white;
    font-family: 'Inter';
    font-size: 20px;
}

.container {
    width: 860px;
    margin: 0 auto;
    padding: 0 20px;
}

.row {
    display: flex;
}

.col-1 {
    flex: 1;
}

.col-2 {
    flex: 2;
}

.col-3 {
    flex: 3;
}

.col-4 {
    flex: 4;
}

.col-5 {
    flex: 5;
}

.col-6 {
    flex: 6;
}

.col-7 {
    flex: 7;
}

.col-8 {
    flex: 8;
}

.col-9 {
    flex: 9;
}

.col-10 {
    flex: 10;
}

.col-11 {
    flex: 11;
}

.wrapper {
    display: flex;
}

h1, h2 {
    font-family: 'Aldrich', sans-serif;
}

h2 {
    font-size: 36px;
}

button {
    width: 140px;
    height: 35px;
    background-color: #30A13F;
    font-family: 'Inter';
    font-size: 20px;
    color: white;
    cursor: pointer;
    border: none;
    padding: 6px 10px;
}

button:hover {
    background-color: rgb(0, 221, 0);
}

/* Header */

header {
    background-image: url('../img/background.jpg');
    background-attachment: fixed;
    padding: 100px 0;
}

nav {
    width: 100%;
    display: flex;
    justify-content: space-between;
}

.logo {
    width: 120px;
    height: 118px;
    height: auto;
    cursor: pointer;
    user-select: none;
}

nav ul {
    margin: 0;
    list-style: none;
}

nav ul li {
    display: inline-block;
    padding-right: 45px;
}

nav ul li:last-of-type {
    padding-right: 0;
}

nav ul a {
    text-decoration: none;
    cursor: pointer;
    color: white;
    font-family: 'Inter';
    font-size: 20px;
}

nav ul a:hover {
    text-decoration: underline;
}

nav ul img {
    -webkit-filter: invert(100%);
    -moz-filter: invert(100%);
    -o-filter: invert(100%);
    -ms-filter: invert(100%);
    transform: translateY(8px);
    width: 30px;
    height: 30px;
}

header .wrapper {
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

h1 {
    font-size: 110px;
    margin: 0;
    user-select: none;
}

h1 + p {
    font-family: 'Inter';
    opacity: 70%;
    font-size: 40px;
    margin: 0;
    user-select: none;
}

.globus-wrapper {
    display: flex;
    justify-content: right;
}

.globus {
    width: 330px;
    height: 330px;
}

/* Service */

.service {
    background-color: rgb(58, 171, 236);
    padding: 130px 0;
}

.service .container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 100%;
}

.service .row:first-child {
    margin-bottom: 45px;
}

.service .row .column:nth-child(2) {
    width: 350px;
    margin-right: 50px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.service img {
    width: 330px;
    height: 250px;
    margin-right: 90px;
}

/* About */

.about {
    background-color: #2B3C5B;
    width: 100%;
    padding: 100px 0;
}

.about .wrapper {
    flex-direction: column;
    justify-content: space-between;
    height: 100%;
}

.about img {
    width: 400px;
    height: 400px;
    border-radius: 5px;
    overflow: hidden;
}

.about .row {
    flex-direction: row;
    gap: 20px;
}

/* Contact */

.contact {
    background-image: url("../img/background.jpg");
    background-attachment: fixed;
    background-position: 0% 313%;
    padding: 90px 0;
}

.contact .container {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.contact p:first-child {
    font-size: 40px;
    text-align: center;
    margin: 0 0 18px 0;
}

.contact p:nth-child(2) {
    font-size: 65px;
    font-family: 'Aldrich', sans-serif;
    text-align: center;
    margin: 0 0 50px 0;
}

.contact button {
    width: 260px;
    height: 60px;
    font-size: 30px;
}

/* Media */

@media (max-width: 800px) {
    header {
        height: 300px;
    }
}

@media (min-width: 1100px) {
    header {
        /* height: 600px; */
    }
    .profil-img {
        width: 10%;
    }
}

